--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,11 @@ form{
      text-align: center;
 }
 
+input{
+     background-color: white;
+     border-radius: 5px;
+}
+
 button{
      margin: 5px;
      padding: 5px 10px;
